--- a/cv-zh.css
+++ b/cv-zh.css
@@ -1,6 +1,7 @@
 @media print {
     @page {
-        margin: 5mm 10mm;
+        /* margin: 5mm 10mm; */
+        margin: 0;
         padding: 0;
     }
 
@@ -24,9 +25,10 @@
 
 html {
     font-size: 10pt;
-    font-family: 'Latin Modern Roman', Courier, monospace;
+    font-family: 'Latin Modern Sans', 'Noto Sans CJK SC', Courier, monospace;
     margin: 0;
-    padding: 0;
+    /* padding: 0; */
+    padding: 5mm 10mm;
 }
 
 body {
@@ -35,21 +37,24 @@ body {
 
 a {
     text-decoration: none;
+    font-family: 'Latin Modern Mono', 'Courier New', Courier, monospace;
     color: black;
 }
 
 h1 {
-    margin-top: 0;
+    margin: 0;
 }
 
 h2 {
     font-size: 1rem;
+    margin: 0;
 }
 
 /* if not specified, li markers should be disc. */
 ul {
     list-style-type: disc;
     padding-left: 2rem;
+    margin: 0;
 }
 
 sup {
@@ -90,6 +95,7 @@ sup {
     border-left: 1mm solid black;
     margin-left: -10mm;
     padding-left: 9mm;
+    /* outline: 1px dashed gray; */
 }
 
 .event--compact {
@@ -108,7 +114,7 @@ sup {
 }
 
 .courses {
-    column-count: 2;
+    column-count: 3;
     column-rule: 0.1mm solid black;
     padding-left: 0;
     /* margin-top: 0; */
