--- a/cv.css
+++ b/cv.css
@@ -1,12 +1,13 @@
 @media print {
     @page {
-        margin: 5mm 10mm;
+        /* margin: 5mm 10mm; */
+        margin: 0;
         padding: 0;
     }
 
     /* turn off body padding in print. */
     body {
-        padding: 0;
+        padding: 5mm 10mm;
     }
 }
 
@@ -24,7 +25,7 @@
 
 html {
     font-size: 10pt;
-    font-family: 'Latin Modern Roman', Courier, monospace;
+    font-family: 'Computer Modern Serif', Courier, monospace;
     margin: 0;
     padding: 0;
 }
@@ -137,7 +138,7 @@ sup {
 }
 
 .mail__link, .site__link {
-    font-family: 'Latin Modern Mono', 'Courier New', Courier, monospace;
+    font-family: 'Computer Modern Mono', 'Courier New', Courier, monospace;
 }
 
 .skill {
