update zh version

--- a/cv-zh.css
+++ b/cv-zh.css
@@ -1,178 +1,4 @@
-@media print {
-    @page {
-        /* margin: 5mm 10mm; */
-        margin: 0;
-        padding: 0;
-    }
-
-    /* turn off body padding in print. */
-    body {
-        padding: 0;
-    }
-}
-
-@media screen {
-    /* emulate page margin in screen. */
-    body {
-        padding: 10mm;
-    }
-
-    /* scratch outline on for debugging. */
-    *, *:before, *:after {
-        outline: 1px solid black;
-    }
-}
-
 html {
-    font-size: 10pt;
-    font-family: 'Latin Modern Sans', 'Noto Sans CJK SC', Courier, monospace;
-    margin: 0;
-    /* padding: 0; */
-    padding: 5mm 10mm;
-}
-
-body {
-    margin: 0;
-}
-
-a {
-    text-decoration: none;
-    font-family: 'Latin Modern Mono', 'Courier New', Courier, monospace;
-    color: black;
-}
-
-h1 {
-    margin: 0;
-}
-
-h2 {
-    font-size: 1rem;
-    margin: 0;
-}
-
-/* if not specified, li markers should be disc. */
-ul {
-    list-style-type: disc;
-    padding-left: 2rem;
-    margin: 0;
-}
-
-sup {
-    vertical-align: baseline;
-}
-
-.list {
-    padding: 0;
-}
-
-.list--bare {
-    list-style: none;
-}
-
-.list--columned {
-    column-count: 2;
-}
-
-.event {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    margin: 0.5em 0;
-}
-
-.event__interval {
-    order: 2;
-    font-weight: 900;
-    white-space: nowrap;
-}
-
-.event__detail {
-    order: 1;
-    max-width: 162mm;
-}
-
-.event--highlighted {
-    border-left: 1mm solid black;
-    margin-left: -10mm;
-    padding-left: 9mm;
-    /* outline: 1px dashed gray; */
-}
-
-.event--compact {
-    margin: 0;
-    display: list-item;
-    list-style-type: disc;
-}
-
-.event--compact .event__interval {
-    order: 1;
-    font-weight: 900;
-}
-
-.event--compact .event__detail {
-    order: 2;
-}
-
-.courses {
-    column-count: 3;
-    column-rule: 0.1mm solid black;
-    padding-left: 0;
-    /* margin-top: 0; */
-}
-
-.course {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-}
-
-.general {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
-.general__name {
-    font-size: 2rem;
-}
-
-.general__other {
-    list-style: none;
-    margin: 0;
-    text-align: right;
-}
-
-.mail__link, .site__link {
-    font-family: 'Latin Modern Mono', 'Courier New', Courier, monospace;
-}
-
-.skill {
-    display: block;
-}
-
-.skill__category {
-    margin: 0;
-}
-
-.skill__list {
-    margin: 0.5em 0;
-    list-style-type: disc;
-}
-
-.bibliography {
-    list-style-type: none;
-    padding: 0;
-}
-
-.bibliography__item {
-    display: flex;
-}
-
-.bibliography__item::before {
-    counter-increment: bibitem;
-    content: "[" counter(bibitem) "]";
-}
-
-.bibliography__item__detail {
-    margin-left: 1rem;
+    font-family: 'Source Han Serif SC', serif;
+    font-weight: normal;
 }
